remove ids from continuous metadata variables list