@@ -48,18 +48,13 @@ public class CorrelationAssayMetadataPlugin extends AbstractPlugin<CorrelationAs
     // Wrangle into correct types for what follows
     EntityDef entity = getContext().getReferenceMetadata().getEntity(entityId).orElseThrow();
 
-    // Grab all continuous variabls from ancestors
-    // The next line only grabs the second-up ancestor instead of all of them, because when i grabbed them all
-    // the variables wold be duplicated in the output. I tried distinct() but that didn't work. Any ideas?
-    // I also noticed we were receiving stable ids in the oriringal request, so i've filtered them out below. There 
-    // is probably a nicer way to do this.
-    // This at least works for now!
-//    Stream<VariableDef> descendantVariableStream = getContext().getReferenceMetadata().getAncestors(entity).get(1).getVariables().stream();
-    List<VariableDef> metadataVariables = getContext().getReferenceMetadata().getAncestors(entity).stream()
-        .skip(1)
-        .filter(entityDef -> !entityDef.isManyToOneWithParent())
-        .flatMap(entityDef -> entityDef.getVariables().stream())
-        .filter(var -> var.getDataShape() == APIVariableDataShape.CONTINUOUS)
+    // Grab all continuous variables from ancestors
+    ReferenceMetadata metadata = getContext().getReferenceMetadata();
+    List<VariableDef> metadataVariables = metadata.getAncestors(entity).stream() // Get all ancestors of entity.
+        .filter(ancestor -> !getManyToOneWithDescendant(metadata, ancestor, entity)) // Filter to those that are one-to-one with target entity or ancestor of entity.
+        .flatMap(entityDef -> entityDef.getVariables().stream()) // Flatten stream of var streams into a single stream of vars.
+        .filter(var -> var.getDataShape() == APIVariableDataShape.CONTINUOUS && var.getSource().isResident()) // Filter out inherited and non-continuous variables.
+        .filter(var -> !var.getVariableId().contains("_stable_id")) // Filter out id variables
         .collect(Collectors.toList());
 
     LOG.info("Metadata variables that are one-to-one with parent for ancestors of entity ID: {} -- {}", entity.getId(),
@@ -71,12 +66,20 @@ public class CorrelationAssayMetadataPlugin extends AbstractPlugin<CorrelationAs
       );
   }
 
+  private Boolean getManyToOneWithDescendant(ReferenceMetadata metadata, EntityDef ancestor, EntityDef descendantToMatch) {
+    return metadata.getChildren(ancestor).stream()
+        .filter(child -> metadata.isEntityAncestorOf(child, descendantToMatch) || descendantToMatch.getId().equals(child.getId())) // Find child on path to descendant to match.
+        .findFirst()
+        .orElseThrow()
+        .isManyToOneWithParent();
+  }
+
   @Override
   protected void execute() {
 
     Correlation1Collection computeConfig = getConfig();
     PluginUtil util = getUtil();
-    ReferenceMetadata meta = getContext().getReferenceMetadata();
+    ReferenceMetadata metadata = getContext().getReferenceMetadata();
 
     // Get compute parameters
     String method = computeConfig.getCorrelationMethod().getValue();
@@ -84,13 +87,13 @@ public class CorrelationAssayMetadataPlugin extends AbstractPlugin<CorrelationAs
     String entityId = collectionVariable.getEntityId();
 
     // Wrangle into helpful types
-    EntityDef entity = meta.getEntity(entityId).orElseThrow();
+    EntityDef entity = metadata.getEntity(entityId).orElseThrow();
     VariableDef computeEntityIdVarSpec = util.getEntityIdVarSpec(entityId);
     String computeEntityIdColName = util.toColNameOrEmpty(computeEntityIdVarSpec);
 
     // Get record id columns
     List<VariableDef> idColumns = new ArrayList<>();
-    for (EntityDef ancestor : meta.getAncestors(entity)) {
+    for (EntityDef ancestor : metadata.getAncestors(entity)) {
       idColumns.add(ancestor.getIdColumnDef());
     }
 
@@ -99,9 +102,12 @@ public class CorrelationAssayMetadataPlugin extends AbstractPlugin<CorrelationAs
 
 
     // Get stream of all ancestors and their variables
-    Stream<VariableDef> descendantVariableStream = meta.getAncestors(entity).get(1).getVariables().stream();
-    List<VariableDef> metadataVariables = descendantVariableStream.filter(var -> var.getDataShape() == APIVariableDataShape.CONTINUOUS).filter(var -> !var.getVariableId().contains("_stable_id")).toList();
-
+    List<VariableDef> metadataVariables = metadata.getAncestors(entity).stream() // Get all ancestors of entity.
+        .filter(ancestor -> !getManyToOneWithDescendant(metadata, ancestor, entity)) // Filter to those that are one-to-one with target entity or ancestor of entity.
+        .flatMap(entityDef -> entityDef.getVariables().stream()) // Flatten stream of var streams into a single stream of vars.
+        .filter(var -> var.getDataShape() == APIVariableDataShape.CONTINUOUS && var.getSource().isResident()) // Filter out inherited and non-continuous variables.
+        .filter(var -> !var.getVariableId().contains("_stable_id")) // Filter out id variables
+        .collect(Collectors.toList());
 
     RServe.useRConnectionWithRemoteFiles(dataStream, connection -> {
       connection.voidEval("print('starting correlation computation')");
